* (bug 26020) Setting $wgEmailConfirmToEdit to true no longer removes diffs
  from recent changes feeds
* (bug 30232) add current time to message wlnote on Special:Watchlist
* (bug 29110) $wgFeedDiffCutoff did not affect new pages
* (bug 32168) Add wfRemoveDotSegments for use in wfExpandUrl
* (bug 32358) Do not display "No higher resolution available" for dimensionless
  files (like audio files)

=== API changes in 1.19 ===
* (bug 19838) siprop=interwikimap can now use the interwiki cache.
* (bug 29748) Add API search prefix support.
* (bug 29684) Set forgotten parameter types in ApiQueryIWLinks.
* (bug 29685) do not output NULL parentid with list=deletedrevs&drprop=parentid.
* siprop=interwikimap and siprop=languages can use silanguagecode to have
  a best effort language name translation. Use CLDR extension for best result.
* (bug 30230) action=expandtemplates should not silently override invalid title
  inputs.
* (bug 18634) Create API to fetch MediaWiki's language fallback tree structure.
* (bug 26885) Allow show/hide of account blocks, temporary blocks and single IP
  address blocks for list=blocks.
* (bug 30591) Add support to only return keys in ApiAllMessages.
* The API now respects $wgShowHostnames and won't share the hostname in
  severedby if it's set to false
* wlexcludeuser parameter added to ApiFeedWatchlist

=== Languages updated in 1.19 ===

MediaWiki supports over 350 languages. Many localisations are updated
regularly. Below only new and removed languages are listed, as well as
changes to languages because of Bugzilla reports.

* Canadian English (en-ca) (new).
* Uighur (Latin) (ug-latn) was incorrectly marked as right-to-left language.
* (bug 30217) Make pt-br a fallback of pt.
* (bug 31193) Set fallback language of Assamese from Bengali to English.
* Update date format for dsb and hsb: month names need the genitive.

=== Other changes in 1.19 ===
* jquery.mwPrototypes module was renamed to jquery.mwExtension.